--- a/inventory.ini
+++ b/inventory.ini
@@ -1,11 +1,11 @@
 [db]
-db.daws78s.online
+db-dev.nsrinformation.cloud
 
 [backend]
-backend.daws78s.online
+backend-dev.nsrinformation.cloud
 
 [frontend]
-frontend.daws78s.online
+nsrinformation.cloud
 
 [all:vars]
 ansible_user=ec2-user
